syntax = "proto3";

option csharp_namespace = "gRPC_Service";

package auth;

service Auth{
	rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
	string Username = 1;
	string Password = 2;
}

message RegisterResponse {
	string Message = 1;
	bool IsSuccess = 2;
}